--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   shared_preferences: ^2.3.2
   intl:
   permission_handler:
+  flutter_barcode_scanner: ^2.0.0
   image_picker:
 
 
